src/test/ui/error-codes/E0302.stderr
error[E0594]: cannot assign to `option`, as it is immutable for the pattern guard
  --> $DIR/E0302.rs:4:21
   |
LL |         option if { option = None; false } => { },
   |                     ^^^^^^^^^^^^^ cannot assign
   |
   = note: variables bound in patterns are immutable until the end of the pattern guard

error: aborting due to previous error

